docs/envoy/v1.13.0/_sources/api-v3/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto:

Dubbo Proxy
===========

.. _extension_envoy.filters.network.dubbo_proxy:


This extension may be referenced by the qualified name *envoy.filters.network.dubbo_proxy*

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

Dubbo Proxy :ref:`configuration overview <config_network_filters_dubbo_proxy>`.

.. _envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboProxy:

extensions.filters.network.dubbo_proxy.v3.DubboProxy
----------------------------------------------------

`[extensions.filters.network.dubbo_proxy.v3.DubboProxy proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L33>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "protocol_type": "...",
    "serialization_type": "...",
    "route_config": [],
    "dubbo_filters": []
  }

.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.protocol_type:

protocol_type
  (:ref:`extensions.filters.network.dubbo_proxy.v3.ProtocolType <envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.ProtocolType>`) Configure the protocol used.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.serialization_type:

serialization_type
  (:ref:`extensions.filters.network.dubbo_proxy.v3.SerializationType <envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.SerializationType>`) Configure the serialization protocol used.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.route_config:

route_config
  (:ref:`extensions.filters.network.dubbo_proxy.v3.RouteConfiguration <envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.RouteConfiguration>`) The route table for the connection manager is static and is specified in this property.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.dubbo_filters:

dubbo_filters
  (:ref:`extensions.filters.network.dubbo_proxy.v3.DubboFilter <envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboFilter>`) A list of individual Dubbo filters that make up the filter chain for requests made to the
  Dubbo proxy. Order matters as the filters are processed sequentially. For backwards
  compatibility, if no dubbo_filters are specified, a default Dubbo router filter
  (`envoy.filters.dubbo.router`) is used.
  
  


.. _envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboFilter:

extensions.filters.network.dubbo_proxy.v3.DubboFilter
-----------------------------------------------------

`[extensions.filters.network.dubbo_proxy.v3.DubboFilter proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L57>`_

DubboFilter configures a Dubbo filter.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}"
  }

.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboFilter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a supported
  filter.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboFilter.config:

config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Filter specific configuration which depends on the filter being
  instantiated. See the supported filters for further documentation.
  
  

.. _envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.ProtocolType:

Enum extensions.filters.network.dubbo_proxy.v3.ProtocolType
-----------------------------------------------------------

`[extensions.filters.network.dubbo_proxy.v3.ProtocolType proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L21>`_

Dubbo Protocol types supported by Envoy.

.. _envoy_v3_api_enum_value_extensions.filters.network.dubbo_proxy.v3.ProtocolType.Dubbo:

Dubbo
  *(DEFAULT)* ⁣the default protocol.
  
  

.. _envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.SerializationType:

Enum extensions.filters.network.dubbo_proxy.v3.SerializationType
----------------------------------------------------------------

`[extensions.filters.network.dubbo_proxy.v3.SerializationType proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L27>`_

Dubbo Serialization types supported by Envoy.

.. _envoy_v3_api_enum_value_extensions.filters.network.dubbo_proxy.v3.SerializationType.Hessian2:

Hessian2
  *(DEFAULT)* ⁣the default serialization protocol.
  
  
