docs/envoy/v1.21.0/_sources/api-v3/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto:

Dubbo Proxy
===========


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto <v1.17:envoy_api_file_envoy/config/filter/network/dubbo_proxy/v2alpha1/dubbo_proxy.proto>`



.. _extension_envoy.filters.network.dubbo_proxy:

This extension may be referenced by the qualified name ``envoy.filters.network.dubbo_proxy``

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.network <extension_category_envoy.filters.network>`

Dubbo Proxy :ref:`configuration overview <config_network_filters_dubbo_proxy>`.

.. _envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboProxy:

extensions.filters.network.dubbo_proxy.v3.DubboProxy
----------------------------------------------------

:repo:`[extensions.filters.network.dubbo_proxy.v3.DubboProxy proto] <api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L35>`


.. code-block:: json

  {
    "stat_prefix": "...",
    "protocol_type": "...",
    "serialization_type": "...",
    "route_config": [],
    "dubbo_filters": []
  }

.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting statistics.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.protocol_type:

protocol_type
  (:ref:`extensions.filters.network.dubbo_proxy.v3.ProtocolType <envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.ProtocolType>`) Configure the protocol used.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.serialization_type:

serialization_type
  (:ref:`extensions.filters.network.dubbo_proxy.v3.SerializationType <envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.SerializationType>`) Configure the serialization protocol used.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.route_config:

route_config
  (**repeated** :ref:`extensions.filters.network.dubbo_proxy.v3.RouteConfiguration <envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.RouteConfiguration>`) The route table for the connection manager is static and is specified in this property.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboProxy.dubbo_filters:

dubbo_filters
  (**repeated** :ref:`extensions.filters.network.dubbo_proxy.v3.DubboFilter <envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboFilter>`) A list of individual Dubbo filters that make up the filter chain for requests made to the
  Dubbo proxy. Order matters as the filters are processed sequentially. For backwards
  compatibility, if no dubbo_filters are specified, a default Dubbo router filter
  (`envoy.filters.dubbo.router`) is used.
  
  


.. _envoy_v3_api_msg_extensions.filters.network.dubbo_proxy.v3.DubboFilter:

extensions.filters.network.dubbo_proxy.v3.DubboFilter
-----------------------------------------------------

:repo:`[extensions.filters.network.dubbo_proxy.v3.DubboFilter proto] <api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L59>`

DubboFilter configures a Dubbo filter.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}"
  }

.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboFilter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a supported
  filter.
  
  
.. _envoy_v3_api_field_extensions.filters.network.dubbo_proxy.v3.DubboFilter.config:

config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Filter specific configuration which depends on the filter being
  instantiated. See the supported filters for further documentation.
  
  

.. _envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.ProtocolType:

Enum extensions.filters.network.dubbo_proxy.v3.ProtocolType
-----------------------------------------------------------

:repo:`[extensions.filters.network.dubbo_proxy.v3.ProtocolType proto] <api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L23>`

Dubbo Protocol types supported by Envoy.

.. _envoy_v3_api_enum_value_extensions.filters.network.dubbo_proxy.v3.ProtocolType.Dubbo:

Dubbo
  *(DEFAULT)* ⁣the default protocol.
  
  

.. _envoy_v3_api_enum_extensions.filters.network.dubbo_proxy.v3.SerializationType:

Enum extensions.filters.network.dubbo_proxy.v3.SerializationType
----------------------------------------------------------------

:repo:`[extensions.filters.network.dubbo_proxy.v3.SerializationType proto] <api/envoy/extensions/filters/network/dubbo_proxy/v3/dubbo_proxy.proto#L29>`

Dubbo Serialization types supported by Envoy.

.. _envoy_v3_api_enum_value_extensions.filters.network.dubbo_proxy.v3.SerializationType.Hessian2:

Hessian2
  *(DEFAULT)* ⁣the default serialization protocol.
  
  
